--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-4BGSRBJ\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-VCIO13M\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
