--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VCIO13M\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-NI5L241\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   //testing email
   //"MailSettings": {
