--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -2,12 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-VCIO13M\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-NI5L241\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   //testing email
   //"MailSettings": {
