--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "cropperjs": "^1.5.13",
     "moment": "^2.29.4",
     "ngx-image-cropper": "^6.3.4",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
