--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JASONPC\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-NI5L241\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   //testing email
   //"MailSettings": {
