--- a/Backend/ProcionAPI.csproj
+++ b/Backend/ProcionAPI.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Files\Procurement\" />
     <Folder Include="Files\VendorFileDetails\" />
   </ItemGroup>
 
