--- a/Backend/ProcionAPI.csproj
+++ b/Backend/ProcionAPI.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="ClosedXML" Version="0.102.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.3" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.3" />
     <PackageReference Include="MailKit" Version="4.0.0" />
