--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,11 +24,13 @@
     "chart.js": "^4.3.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cropperjs": "^1.5.13",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "ngx-image-cropper": "^6.3.4",
     "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
