--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MOSQ-YEET-OES;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
-    "RestoreConnection": "Server=MOSQ-YEET-OES;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-4BGSRBJ\\SQLEXPRESS;Database=ProcionAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "RestoreConnection": "Server=DESKTOP-4BGSRBJ\\SQLEXPRESS;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "SqlServerBasePath": "C:\\Backup\\BackupDirectory\\",
   "BackupDirectory": "C:\\Backup\\BackupDirectory\\",
