--- a/Backend/ProcionAPI.csproj
+++ b/Backend/ProcionAPI.csproj
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="ClosedXML" Version="0.102.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.3" />
