--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:procionserver.database.windows.net,1433;Initial Catalog=ProcionDB;Persist Security Info=False;User ID=Team11Users;Password=EmilGeeMyKopseer@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "DefaultConnection": "Server=tcp:procionserver.database.windows.net,1433;Initial Catalog=ProcionDB;Persist Security Info=False;User ID=Team11Users;Password=ProcionMoyo2023;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "RestoreConnection": "Server=JASONPC\\SQLEXPRESS;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "SqlServerBasePath": "C:\\Backup\\BackupDirectory\\",
