--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -40,7 +40,7 @@
     "DisplayName": "Moyo Support Team",
     "From": "moyoemailservice@gmail.com",
     "Host": "smtp.gmail.com",
-    "Password": "mbjqsujpkqzgqaku",
+    "Password": "oyzyucksfigsngok ",
     "Port": 587,
     "UserName": "moyoemailservice@gmail.com",
     "UseSSL": false,
